update to environment files

--- a/workday-to-gcal/public/index.html
+++ b/workday-to-gcal/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Workday → Google Calendar</title>
+  <title>WorkdayToGCal</title>
   <meta name="description" content="Convert / upload your Workday class schedule directly into a recurring Google Calendar schedule." />
   <meta name="theme-color" content="#121212" />
 
