--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <title>Privacy Policy • Workday2GCal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link id="dynamic-favicon" rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.ico" />
     <style>
       body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; margin:0; background:#fafafa; color:#222; }
       header { background:#fff; border-bottom:1px solid #eee; padding:16px 24px; }
@@ -48,6 +50,6 @@
       <h2>Questions</h2>
       <p>Open a GitHub issue or email <a href="mailto:william88800@hotmail.com">william88800@hotmail.com</a> with concerns.</p>
     </main>
-    <footer>&copy; <script>document.write(new Date().getFullYear())</script> William Chen</footer>
+  <footer>&copy; <script>document.write(new Date().getFullYear())</script> William Chen</footer>
   </body>
 </html>
